# OSBot-PyQt6

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
docs/: README.md  architecture.md  content-replacement.md  development.md  ssl-bypass.md
osbot_pyqt6/: build_macos.py  content_replacer.py  main_app.py
osbot_pyqt6/utils/: Version.py
owasp_pyqt6/: aggressive_ssl_bypass.py  build_macos.py  client.py  main_app.py  server.py  start_mitmproxy.py
owasp_pyqt6/utils/: Version.py
tests/unit/utils/: test_Version.py
